@@ -4,6 +4,11 @@ History of this buildout
 6.0.14 (unreleased)
 -------------------
 
+- MINA-136: Reverse sort referencebrowserwidget on effective date.
+  This is our new default.  Set the sort order explicitly in some
+  fields, especially sorting on sortable title for contact persons.
+  [maurits]
+
 - Removed patch for project reference field and instead configured the
   widget properly.  [maurits]
 
